; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vatpic.c_vatpic_icw3.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vatpic.c_vatpic_icw3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vatpic = type { i32 }
%struct.atpic = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"atpic icw3 0x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vatpic*, %struct.atpic*, i32)* @vatpic_icw3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vatpic_icw3(%struct.vatpic* %0, %struct.atpic* %1, i32 %2) #0 {
  %4 = alloca %struct.vatpic*, align 8
  %5 = alloca %struct.atpic*, align 8
  %6 = alloca i32, align 4
  store %struct.vatpic* %0, %struct.vatpic** %4, align 8
  store %struct.atpic* %1, %struct.atpic** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.vatpic*, %struct.vatpic** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @VATPIC_CTR1(%struct.vatpic* %7, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load %struct.atpic*, %struct.atpic** %5, align 8
  %11 = getelementptr inbounds %struct.atpic, %struct.atpic* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  ret i32 0
}

declare dso_local i32 @VATPIC_CTR1(%struct.vatpic*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
